# test

./: .gitignore  README.md  pyproject.toml
TODOs/: TODO_epjson.ipynb  TODO_mv+test_ThinEnv.ipynb  TODO_mv+test_events.ipynb  TODO_var_listing.ipynb  TODO_viz.ipynb  notes.md  playground.ipynb
TODOs/.ooep-report-9e1287d2-8e75-4cf5-bbc5-f76580b56a69/: eplusout.audit  eplusout.bnd  eplusout.dxf  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtr  eplusout.rdd  eplusssz.csv  eplustbl.csv
TODOs/.ooep-report-aaaaa/: eplusout.audit  eplusout.bnd  eplusout.dxf  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mtr
TODOs/.ooep-report-epjson/: eplusout.end  eplusout.err
TODOs/.ooep-report-epjson-/: eplusout.err
TODOs/.ooep-report-n/: eplusout.audit  eplusout.bnd  eplusout.dxf  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtd  eplusout.mtr  eplusout.rdd  eplustbl.csv  epluszsz.csv
TODOs/archives/: TODO_viz.ipynb
docs/energyplus/ooep/: _config.yml  _toc.yml
docs/energyplus/ooep/content/: root.ipynb
docs/energyplus/ooep/content/examples/: 10_rl.ipynb
docs/energyplus/ooep/content/references/api/: root.rst
docs/energyplus/ooep/content/references/architecture/: component.ipynb  engine.ipynb  root.ipynb
docs/energyplus/ooep/content/tutorials/: 0_installation.ipynb  1_starter.ipynb  2_interactions.ipynb
tests/energyplus/ooep/test_addons/test_gymnasium/: test_utils.py
tests/energyplus/ooep/test_utils/: test_mappings.py
(+34 files in other folders)
